# viewdelta-scd

./: LICENSE  README.md  inference.py  pyproject.toml  setup.py
ViewDelta/: embedders.py  utils.py
ViewDelta/model/: model_feature_segmentor.py  patch_embedder.py  pl_model_feature_segmentor.py  transformer_args.py
