[project]
authors = [{name = "drags99", email = "srvarghese95@gmail.com"}]
name = "ViewDelta"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = ["deepspeed>=0.17.1,<0.18"]

[tool.hatch.build.targets.wheel]
packages = ["ViewDelta"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu121"]

[tool.pixi.workspace]
channels = ["conda-forge", "nvidia", "nvidia/label/cuda-12.1.0"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.10.*"
scipy = ">=1.15.2,<2"
scikit-learn = ">=1.7.0,<2"
pandas = ">=2.3.0,<3"
opencv = ">=4.10.0,<5"
kornia = ">=0.8.1,<0.9"
einops = ">=0.8.1,<0.9"
matplotlib = ">=3.10.3,<4"
transformers = ">=4.52.4,<5"
sentencepiece = ">=0.2.0,<0.3"
protobuf = ">=5.28.3,<6"
wandb = ">=0.20.1,<0.21"
lightning = ">=2.5.1.post0,<3"
pyparsing = ">=3.2.3,<4"
pytables = { version = ">=3.10.1,<4", channel = "conda-forge" }
timm = "1.0.13.*"
cuda-nvcc = { version = ">=12.1.66,<13", channel = "nvidia/label/cuda-12.1.0" }
cudnn = { version = ">=9.3.0.75,<10", channel = "nvidia" }
pytorch-gpu = "*"
cuda-version = "12.1.*"

[tool.pixi.pypi-dependencies]
ViewDelta = { path = ".", editable = true }

[tool.pixi.system-requirements]
cuda = "12.1"

[tool.pixi.tasks]
